2003-09-17  Sam Steingold  <sds@gnu.org>

	* macro8.tst: added a NOTINLINE declaration test

2003-06-18  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests) [CLISP]: added weakptr
	* weakptr.tst: new test file for weak pointers

2003-05-13  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests) [CLISP]: run defhash
	* defhash.tst: test DEFINE-HASH-TABLE-TEST

2003-05-15  Sam Steingold  <sds@gnu.org>

	* tests.lisp (with-accumulating-errors): new macro
	(run-all-tests, do-test, do-errcheck): count the total number of
	tests in addition to the number of errors

2003-05-14  Jörg Höhle  <hoehle@users.sourceforge.net>

	* format.tst: one of the few files that wants TAB characters
	to test the Tilde Newline cases. I reintroduced them.

2003-05-13  Jörg Höhle  <hoehle@users.sourceforge.net>

	* ffi.tst: raised test coverage from 53 to 75% of foreign.d

2003-04-29  Jörg Höhle  <hoehle@users.sourceforge.net>

	* ffi.tst: Augmented FFI testsuite

2003-04-18  Sam Steingold  <sds@gnu.org>

	* tests.lisp (with-ignored-errors) [CLISP]: bind *PRINT-READABLY*
	and *PRINT-CIRCLE* to NIL when printing the error message

2003-04-05  Sam Steingold  <sds@gnu.org>

	* tests.lisp (with-ignored-errors) [CLISP]: print error message

2003-03-31  Kaz Kylheku  <kaz@ashi.footprints.net>

	* backquot.tst: Added many new tests.

2003-03-08  Sam Steingold  <sds@gnu.org>

	* bin-io.tst (list->integer, integer->list): new functions

2003-02-14  Sam Steingold  <sds@gnu.org>

	* tests.lisp (do-test, do-errcheck): return the number of errors
	(run-test): print some sugar, return error count
	(run-all-tests): print some sugar

2003-02-13  Sam Steingold  <sds@gnu.org>

	* iofkts.tst, path.tst, streams.tst, strings.tst: added tests for
	displaced strings combined with :START/:END arguments

2003-02-04  Sam Steingold  <sds@gnu.org>

	* tests.lisp (run-all-tests) [CLISP, FFI]: run "ffi"
	* ffi.tst: new test file for the CLISP FFI

2002-12-19  Sam Steingold  <sds@gnu.org>
